@@ -1,4 +1,4 @@
-* Get multiple dive tanks working
+* Get average depth and sac for multiple dive tank sets working
 * Display related info from other tables in dive details (i.e. shops, trips etc.)
 * Display of overview and details pages for country and city
 * Extra profile charts (e.g. temperature, gas changes, Asc-/Descend rate, tank pressures, ppO2 etc.)
