@@ -98,6 +98,7 @@ $_lang['logbook_water'] = "Water:";
 $_lang['logbook_surface'] = "Waves:";
 $_lang['logbook_uwcurrent'] = "Current:";
 $_lang['logbook_watertemp'] = "Water Temp.:";
+$_lang['logbook_tankset'] = "Cylinder Set #";
 $_lang['logbook_tanktype'] = "Cylinder Type:";
 $_lang['logbook_tanksize'] = "Cylinder Size:";
 $_lang['logbook_supplytype'] = "Supply Type:";
@@ -115,6 +116,7 @@ $_lang['logbook_minppo2'] = "Min. PPO2:";
 $_lang['logbook_maxppo2'] = "Max. PPO2:";
 $_lang['logbook_mod'] = "MOD:";
 $_lang['logbook_ead'] = "EAD:";
+$_lang['logbook_end'] = "END:";
 $_lang['logbook_entry'] = "Entry:";
 $_lang['logbook_boat'] = "Boat Name:";
 $_lang['logbook_pgstart'] = "Start PG:";
