@@ -1,4 +1,4 @@
-phpDivingLog v3.0-alpha3 - 2011-08-20 - Lloyd Borrett and Rob Lensen
+phpDivingLog v3.0-alpha3 - 2011-08-24 - Lloyd Borrett and Rob Lensen
     * Added tabs to dive details and dive statistics pages 
     * Modified the calculation of imperial cylinder size to use working pressure if available
     * Added Active to equipment overview listing
@@ -11,6 +11,8 @@ phpDivingLog v3.0-alpha3 - 2011-08-20 - Lloyd Borrett and Rob Lensen
     * Added display of dive shops/centres and trips/vacations
     * Made URLs and email addresses in dive/site/equipment/shop/trip comments clickable
     * Added display of cylinder and supply type statistics
+    * Added display of multiple cylinder sets to dive details breathing tab
+    * Added calculation of END for Trimix dives
 
 phpDivingLog v3.0-alpha2 - 2011-08-01 - Lloyd Borrett
     * Added ability to display lots of additional values 
